# people

face_detector/: CMakeLists.txt
leg_detector/: CMakeLists.txt  package.xml
leg_detector/include/leg_detector/: leg_detector_lib.h  matched_feature.h  saved_feature.h
leg_detector/src/: leg_detector.cpp  leg_detector_lib.cpp  saved_feature.cpp
people/: package.xml
people_msgs/: CMakeLists.txt
people_msgs/msg/: PersonPositionMeasurement.msg
people_tracking_filter/: CMakeLists.txt
